# connect4

./: connect4.game  pyproject.toml
connect4/: __main__.py  scratch.py
connect4/exceptions/: __init__.py
connect4/models/: __init__.py  cell.py  cellvalue.py  column.py  events.py  game.py  gamestate.py
tests/: test_grid.py
