[tool.poetry]
name = "connect4"
version = "0.1.0"
description = ""
authors = ["Emil Kloeden <emilkloeden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
